--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,17 @@
 /* Importar variables CSS */
 @import '../styles/variables.css';
 
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -16,6 +23,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding-top: 70px; /* Espacio para la navbar fija */
+  margin: 0;
+  min-height: 100vh;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
 }
 
 * {
