adapting database to project´s needs

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -10,7 +10,7 @@
   
   /* Colores de fondo */
   --color-bg-primary: #ffffff;
-  --color-bg-secondary: #f8fafc;
+  --color-bg-secondary: #e2e2e2;
   --color-bg-surface: #ffffff;
   --color-bg-gray: #eeeeee;
   --color-bg-overlay: rgba(0, 0, 0, 0.5);
