--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -4,9 +4,9 @@
 
 :root {
   /* 🎨 Colores principales */
-  --color-primary: #2563eb;
-  --color-primary-dark: #1d4ed8;
-  --color-primary-light: #3b82f6;
+  --color-primary: #070707;
+  --color-primary-dark: #2e2e2e;
+  --color-primary-light: #7c7c7c;
   
   /* Colores de fondo */
   --color-bg-primary: #ffffff;
@@ -14,15 +14,11 @@
   --color-bg-surface: #ffffff;
   --color-bg-gray: #eeeeee;
   --color-bg-overlay: rgba(0, 0, 0, 0.5);
-  --color-bg-primary-buttons: linear-gradient(
-      135deg,
-      rgba(89, 90, 168, 0.8),
-      rgba(87, 53, 119, 0.8)
-    );
+ 
   
   /* Colores de texto */
-  --color-text-primary: #1f2937;
-  --color-text-secondary: #424242;
+  --color-text-primary: #252525;
+  --color-text-secondary: #494949;
   --color-text-muted: #9ca3af;
   --color-text-inverse: #ffffff;
   
@@ -59,7 +55,7 @@
   --font-size-2xl: 1.5rem;     /* 24px */
   --font-size-3xl: 1.875rem;   /* 30px */
   --font-size-4xl: 2.25rem;    /* 36px */
-  --font-size-5xl: 3rem;       /* 48px */
+  --font-size-5xl: 5rem;       /* 48px */
   
   /* Pesos de fuente */
   --font-weight-light: 300;
@@ -108,4 +104,9 @@
   --z-modal: 1050;
   --z-popover: 1060;
   --z-tooltip: 1070;
+
+    /*  Buttons */
+  --color-bg-primary-buttons: var(--color-primary);
+  --color-border-secondary-buttons: #414141;
+
 }
