--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,15 +15,24 @@ body {
   scroll-behavior: smooth;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  letter-spacing: -0.075em; 
+}
+
 body {
   color: var(--color-text-primary);
-  background: var(--color-bg-secondary);
+  background: var(--color-bg-primary);
+  background-image: 
+    linear-gradient(rgba(0,0,0,0.03) 1px, transparent 1px),
+    linear-gradient(90deg, rgba(0,0,0,0.03) 1px, transparent 1px);
+  background-size: 35vmin 60vmin;
   font-family: var(--font-sans);
   font-size: var(--font-size-base);
   line-height: var(--line-height-normal);
+  letter-spacing: -0.025em; 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding-top: 70px; /* Espacio para la navbar fija */
+  padding-top: 70px; 
   margin: 0;
   min-height: 100vh;
   text-rendering: optimizeLegibility;
@@ -40,6 +49,10 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+/* ======================
+   BUTTONS & TAGS
+   ====================== */
 
 .cta-primary,
 .cta-secondary {
@@ -71,10 +84,10 @@ a {
   border: 2px solid var(--color-border-secondary-buttons);
 
   &:hover {
-    background: var(--color-bg-secondary);
+    /* background: var(--color-bg-secondary); */
     border-color: var(--color-text-primary);
     transform: translateY(-2px);
-    box-shadow: var(--shadow-md);
+    box-shadow: var(--shadow-lg);
   }
 }
 
@@ -95,6 +108,8 @@ a {
         box-shadow: var(--shadow-md);
       }
     }
+
+
 
 @media (prefers-color-scheme: dark) {
   html {
