--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,8 @@ body {
   overflow-x: hidden;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  padding-left: var(--spacing-md);
+  padding-right: var(--spacing-md);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -84,7 +86,6 @@ a {
   border: 2px solid var(--color-border-secondary-buttons);
 
   &:hover {
-    /* background: var(--color-bg-secondary); */
     border-color: var(--color-text-primary);
     transform: translateY(-2px);
     box-shadow: var(--shadow-lg);
@@ -92,13 +93,12 @@ a {
 }
 
 .tech-tag {
-      background: var(--color-bg-surface);
+      background: var(--color-bg-gray);
       color: var(--color-text-primary);
       padding: var(--spacing-sm) var(--spacing-md);
       border-radius: var(--radius-full);
       font-size: var(--font-size-sm);
       font-weight: var(--font-weight-medium);
-      border: 1px solid var(--color-border);
       transition: var(--transition-all);
       
       &:hover {
@@ -116,3 +116,8 @@ a {
     color-scheme: dark;
   }
 }
+
+
+
+
+
