--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -12,7 +12,7 @@
   --color-bg-primary: #ffffff;
   --color-bg-secondary: #bbbbbb;
   --color-bg-surface: #ffffff;
-  --color-bg-gray: #eeeeee;
+  --color-bg-gray: #f3f2f2;
   --color-bg-green: #9bffb0;
   --color-bg-overlay: rgba(0, 0, 0, 0.5);
  
